src/snapshots/mailypoppins__send__tests__markdown_to_html_signature_without_quoted_html.snap
---
source: src/send.rs
assertion_line: 350
expression: html
---
<!DOCTYPE html>
<html>
<head>
<meta charset="UTF-8">
<style>
body { font-family: Helvetica, Arial, sans-serif; font-size: 12pt; line-height: 1.6; color: #000; }
a { color: #0066cc; }
p { margin: 0 0 1em 0; }
blockquote { margin: 0.5em 0; padding: 0 0 0 1em; border-left: 2px solid #ccc; white-space: pre-wrap; }
</style>
</head>
<body>
<div style="font-family: Helvetica, Arial, sans-serif; font-size: 12pt; line-height: 1.6; color: #000;">
<p>My reply</p>
<p>-- Best, Alice</p>
<div style="padding-top:1em">
<div style="margin:0;padding:0 0 0 1em;border-left:2px solid #ccc">
<p>Quoted text</p>
</div>

</div>
</div>
</body>
</html>
