src/snapshots/mailypoppins__send__tests__markdown_to_html_tables_and_links.snap
---
source: src/send.rs
assertion_line: 357
expression: html
---
<!DOCTYPE html>
<html>
<head>
<meta charset="UTF-8">
<style>
body { font-family: Helvetica, Arial, sans-serif; font-size: 12pt; line-height: 1.6; color: #000; }
a { color: #0066cc; }
p { margin: 0 0 1em 0; }
blockquote { margin: 0.5em 0; padding: 0 0 0 1em; border-left: 2px solid #ccc; white-space: pre-wrap; }
</style>
</head>
<body>
<div style="font-family: Helvetica, Arial, sans-serif; font-size: 12pt; line-height: 1.6; color: #000;">
<table><thead><tr><th>A</th><th>B</th></tr></thead><tbody>
<tr><td>1</td><td>2</td></tr>
</tbody></table>
<p><a href="https://example.com">Link</a></p>
<p><del>strikethrough</del></p>

</div>
</body>
</html>
